--- a/pitstop/frontend/Phase-01/app/globals.css
+++ b/pitstop/frontend/Phase-01/app/globals.css
@@ -95,3 +95,25 @@ body {
   direction: ltr;
   text-align: left;
 }
+
+
+
+/* استایل اسکرول بار در کل سایت */
+::-webkit-scrollbar {
+  width: 8px; /* عرض اسکرول بار */
+  height: 8px; /* ارتفاع اسکرول بار افقی */
+}
+
+::-webkit-scrollbar-track {
+  background: #353e4e; /* رنگ پس‌زمینه اسکرول بار */
+}
+
+::-webkit-scrollbar-thumb {
+  background: #4a5568; /* رنگ اسکرول بار */
+  border-radius: 10px;
+  transition: background 0.3s ease-in-out;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #718096; /* تغییر رنگ هنگام هاور */
+}
